--- a/apps/Makefile
+++ b/apps/Makefile
@@ -1,7 +1,7 @@
 .PHONY: clean
 
 main:main.o
-	gcc -c main.c -L../lib -lfuncs -o main
+	gcc -c main.c -L../lib -o main
  
 clean:
 	rm -f libfuncs.a func1.o func2.o
