bolck  include-> lib

--- a/libs/Makefile
+++ b/libs/Makefile
@@ -2,9 +2,9 @@
 .PHONY: clean
 
 
-libfuncs.a: move_block.c
+libfuncs.a: block.o move_block.o
 	ar rv libfuncs.a 
 %.o: %.c
 	gcc -c -g -Wall $< -o $@  
 clean:
-	rm -f libfuncs.a  move_block.c
+	rm -f libfuncs.a block.o move_block.o
